k8s/services/dify/k8s/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dify
  namespace: backend
  annotations:
    "app.kubernetes.io/managed-by": "helm"
    "meta.helm.sh/release-name": "dify"
spec:
  parentRefs:
    - name: eg
      namespace: api-gateway
  hostnames:
    - "example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /console/api
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /v1
        - path:
            type: PathPrefix
            value: /files
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - group: ""
          kind: Service
          name: dify-api-svc
          port: 80
          weight: 1

    - matches:
        - path:
            type: PathPrefix
            value: /explore
      backendRefs:
        - group: ""
          kind: Service
          name: dify-frontend
          port: 80
          weight: 1

    - matches:
        - path:
            type: PathPrefix
            value: /e
      backendRefs:
        - group: ""
          kind: Service
          name: dify-plugin-daemon
          port: 5002
          weight: 1

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: dify-frontend
          port: 80
          weight: 1
